--- a/public/style.css
+++ b/public/style.css
@@ -300,7 +300,7 @@ main ul li:before {
 	font-size: 1.4rem;
   line-height:1rem;
   font-family: sans-serif;
-	color: 	#00984a;
+	color: 	#055
 }
 
 main ol {
