--- a/public/style.css
+++ b/public/style.css
@@ -335,7 +335,7 @@ img {width:100%; margin:.4rem auto;}
 .lantern { display:inline-start;padding:0 1em .0em 1em; margin: .3em; margin-left:0; margin-top:0; float:left; width:10%;}
 
 
-.mage { display:inline-end;padding:1em 0em 1em 0em; margin: .3em; margin-left:0; margin-top:0; float:left; width:20%;}
+.mage { display:inline-end;padding:1em 0em 1em 0em; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
 
 .lute { display:inline-end;padding:0 1em 0em 1em; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
 
