--- a/public/style.css
+++ b/public/style.css
@@ -322,7 +322,7 @@ main ol li:before {
 }
 
 main li {
-  margin-bottom:1rem; text-align:justify}
+  margin-bottom:.5rem; text-align:justify}
 
 /* 
 .oOo.oOo.oOo.oOo.oOo.oOo.oOo.oOo.
