--- a/public/style.css
+++ b/public/style.css
@@ -295,7 +295,7 @@ main ul {
 	list-style-type: none;
 }
 main ul li:before {
-	content: "♫";
+	content: "♫.";
 
 	text-shadow: 1px 1px 0 #1c4030, -1px 1px 0 #1c4030, -1px -1px 0 #1c4030, 1px -1px 0 #1c4030;
 	margin-right: 0.3rem;
