--- a/public/style.css
+++ b/public/style.css
@@ -281,7 +281,87 @@ main a{
 main a:hover {
 color:#dfbe05;
 }
+/*
+~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~
+~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~
+â€¢ â€¢ to top button â€¢ â€¢
+~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~
+~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~^~
+*/
 
+@property --progress {
+  syntax: '<length-percentage>';
+  inherits: false;
+  initial-value: 0%;
+}
+
+@property --angle {
+  syntax: '<angle>';
+  inherits: true;
+  initial-value: -90deg;
+}
+
+@keyframes progress {
+  0% {
+    --progress: 0%;
+    --angle: 0deg;
+  }
+  
+  2% {
+    --angle: -90deg;
+  }
+  
+  100% {
+    --progress: 100%;
+  }
+}
+
+.topup {
+  --yellow: oklch(38.68% 0.215 288.75);
+  --white: oklch(60.51% 0.245 296.52);
+  color:#e8e8ff;
+  background-image: linear-gradient(var(--yellow) 0% var(--progress), var(--white) var(--progress) 100%);
+  border: 4px solid #4a08ac;
+  border-radius: 0.5em;
+  display: inline-block;
+  padding: 0.3em;
+  position: fixed;
+  inset: auto 2rem 2rem auto;
+  overflow: hidden;
+  animation: progress linear;
+  animation-timeline: scroll();
+}
+
+@supports not (animation-timeline: scroll()) {
+  .topup {
+    background: var(--yellow);
+  }
+}
+
+.topup:is(:link, :visited) {
+  color:#e8e8ff;
+  text-decoration: none;
+}
+
+.topup span {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.topup svg {
+  display: block;
+  fill: none;
+  stroke: #e8e8ff;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3px;
+  transform: rotate(var(--angle));
+}
 /* 
 .oOo.oOo.oOo.oOo.oOo.oOo.oOo.oOo.
 .oOo.oOo.oOo.oOo.oOo.oOo.oOo.oOo.
