--- a/public/style.css
+++ b/public/style.css
@@ -317,9 +317,9 @@ color:#dfbe05;
 }
 
 .topup {
-  --yellow: oklch(38.68% 0.215 288.75);
-  --white: oklch(60.51% 0.245 296.52);
-  color:#e8e8ff;
+  --yellow: #1c4030;
+  --white: #2b7344;
+  color:#00d95b;
   background-image: linear-gradient(var(--yellow) 0% var(--progress), var(--white) var(--progress) 100%);
   border: 4px solid #4a08ac;
   border-radius: 0.5em;
@@ -339,7 +339,7 @@ color:#dfbe05;
 }
 
 .topup:is(:link, :visited) {
-  color:#e8e8ff;
+  color:#00d95b;
   text-decoration: none;
 }
 
@@ -356,7 +356,7 @@ color:#dfbe05;
 .topup svg {
   display: block;
   fill: none;
-  stroke: #e8e8ff;
+  stroke: #00d95b;
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 3px;
