--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,8 @@ background-size: 4px 100%;
 
 #wrapper {
   display: flex;
-  flex-direction: column;}
+  flex-direction: column;
+  min-height: 100vh;}
  /* 
 WELCOME
 */ 
@@ -307,7 +308,7 @@ color:#dfbe05;
   }
   
   2% {
-    --angle: -180deg;
+    --angle: -90deg;
   }
   
   100% {
@@ -320,7 +321,7 @@ color:#dfbe05;
   --white: #2b7344;
   color:#00d95b;
   background-image: linear-gradient(var(--yellow) 0% var(--progress), var(--white) var(--progress) 100%);
-  border: 4px solid #1c4030;
+  border: 4px solid #4a08ac;
   border-radius: 0.5em;
   display: inline-block;
   padding: 0.3em;
