--- a/public/style.css
+++ b/public/style.css
@@ -402,7 +402,7 @@ main ol li:before {
 }
 
 main li {
-  margin: .5rem 0 1rem 0; text-align:justify}
+  margin: 1rem 0; text-align:justify}
 
 /* 
 .oOo.oOo.oOo.oOo.oOo.oOo.oOo.oOo.
