--- a/public/style.css
+++ b/public/style.css
@@ -375,6 +375,7 @@ main ul {
   background-color:#00984a;
   padding:.3rem;
   width:100%;
+  border-radius:10px;
   margin:auto;
   border: 8px solid #00d95b;
 	list-style-type: none;
