--- a/public/style.css
+++ b/public/style.css
@@ -374,7 +374,7 @@ main ul {
   padding:.3rem;
   border-radius:10px;
   margin:auto;
-  border-left: .3rem solid #2b7344;
+  border-left: .3rem solid #00d95b;
 	list-style-type: none;
 }
 main ul li:before {
