--- a/public/style.css
+++ b/public/style.css
@@ -374,7 +374,7 @@ main ul {
   padding:.3rem;
   margin:auto;
 
-  border-left: .8rem solid #2b7344;
+  border-left: 1.2rem solid #2b7344;
 	list-style-type: none;
 }
 main ul li:before {
