--- a/public/style.css
+++ b/public/style.css
@@ -115,9 +115,9 @@ midi-player {
 }
 midi-player {margin:auto 0; padding:0;}
 midi-player::part(control-panel) {
-  background: #00d95b;
   color:#000;
   margin:0;
+  text-align: left;
   padding:0;
   border-radius: 0px;
 }
