--- a/public/style.css
+++ b/public/style.css
@@ -95,13 +95,13 @@ HEADER STYLES
 */
 HEADER H1 {font-size:5rem;text-transform:uppercase;}
 
-#midicontainer h4 {margin-left:.5em}
+#midicontainer h4 {margin-left:.5em;}
 
 #midicontainer {  display: block;
   width: inherit;
   margin-right:20%;
   margin-bottom: 0;
-  padding:.5em;
+  padding: 1EM .5em;
   padding-bottom:0;
   background: #00d95b;
   color:#000;
