--- a/public/style.css
+++ b/public/style.css
@@ -422,12 +422,12 @@ main li {
 img {width:100%; margin:.4rem auto;}
 
 
-.lantern { display:inline-start;padding:0 1em .0em 1em; margin: .3em; margin-left:0; margin-top:0; float:left; width:16%;}
+.lantern { display:inline-start;padding:0; margin: .3em; margin-left:0; margin-top:0; float:left; width:16%;}
 
 
-.mage { display:inline-end;padding:1em 0em 1em 0em; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
+.mage { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
 
-.lute { display:inline-end;padding:0 1em 0em 1em; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
+.lute { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
 
 .book { display:inline-end;padding:0 1em 0em 1em; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
 
