--- a/public/style.css
+++ b/public/style.css
@@ -79,7 +79,7 @@ header {
 
   border-bottom:4px solid #2b7344;
   font-family: "VT323", monospace;
-  font-size:3.0rem}
+  font-size:4rem}
 footer {
   color: white;
   text-align: center;
@@ -749,6 +749,7 @@ background-size: 4px 100%;
   border-bottom: 4px solid #00d95b;
   font-family: "VT323", monospace;
   text-transform: uppercase;
+  font-size:1.3em;
 }
 nav li a:hover, nav li span:hover {
 
