--- a/public/style.css
+++ b/public/style.css
@@ -321,11 +321,11 @@ color:#dfbe05;
 }
 
 .topup {
-  --yellow: #1c4030;
-  --white: #2b7344;
-  color:#00d95b;
+  --yellow: #00d95b;
+  --white: #1c4030;
+  color:#ffd;
   background-image: linear-gradient(var(--yellow) 0% var(--progress), var(--white) var(--progress) 100%);
-  border:4px solid #1c4030;
+  border:4px solid #00d95b;
   border-radius: 0em;
   display: inline-block;
   padding: 0.3em;
