--- a/public/style.css
+++ b/public/style.css
@@ -321,9 +321,9 @@ color:#dfbe05;
 }
 
 .topup {
-  --yellow: #00d95b;
+  --yellow: #2f8e56;
   --white: #1c4030;
-  color:#ffd;
+  color:#00d95b;
   background-image: linear-gradient(var(--yellow) 0% var(--progress), var(--white) var(--progress) 100%);
   border:4px solid #00d95b;
   border-radius: 0em;
