--- a/public/style.css
+++ b/public/style.css
@@ -321,7 +321,7 @@ color:#dfbe05;
 }
 
 .topup {
-  --yellow: #2f8e56;
+  --yellow: #00411b;
   --white: #1c4030;
   color:#00d95b;
   background-image: linear-gradient(var(--yellow) 0% var(--progress), var(--white) var(--progress) 100%);
