--- a/public/style.css
+++ b/public/style.css
@@ -322,7 +322,7 @@ color:#dfbe05;
 
 .topup {
   --yellow: #00411b;
-  --white: #1c4030;
+  --white: #007230;
   color:#00d95b;
   background-image: linear-gradient(var(--yellow) 0% var(--progress), var(--white) var(--progress) 100%);
   border:4px solid #00d95b;
