--- a/public/style.css
+++ b/public/style.css
@@ -322,10 +322,10 @@ color:#dfbe05;
 
 .topup {
   --yellow: #00411b;
-  --white: #007230;
-  color:#00d95b;
+  --white: #00d95b;
+  color:#ffd;
   background-image: linear-gradient(var(--yellow) 0% var(--progress), var(--white) var(--progress) 100%);
-  border:4px solid #00d95b;
+  border:4px solid #30e403;
   border-radius: 0em;
   display: inline-block;
   padding: 0.3em;
