--- a/public/style.css
+++ b/public/style.css
@@ -276,7 +276,7 @@ footer p {text-align:center}
 
 a {
   text-decoration: none;
-  color:#30e403
+  color:#00d95b
 }
 
 main a{
@@ -302,17 +302,17 @@ color:#dfbe05;
 @property --angle {
   syntax: '<angle>';
   inherits: true;
-  initial-value: 90deg;
+  initial-value: -90deg;
 }
 
 @keyframes progress {
   0% {
     --progress: 0%;
-    --angle: -90deg;
+    --angle: 0deg;
   }
   
   2% {
-    --angle: 90deg;
+    --angle: -90deg;
   }
   
   100% {
@@ -321,12 +321,12 @@ color:#dfbe05;
 }
 
 .topup {
-  --yellow: #00411b;
-  --white: #00a846;
-  color:#ffd;
+  --yellow: #1c4030;
+  --white: #2b7344;
+  color:#00d95b;
   background-image: linear-gradient(var(--yellow) 0% var(--progress), var(--white) var(--progress) 100%);
-  border:4px solid #30e403;
-  border-radius: 0em;
+  border:4px solid #1c4030;
+  border-radius: 0.5em;
   display: inline-block;
   padding: 0.3em;
   position: fixed;
