--- a/public/style.css
+++ b/public/style.css
@@ -420,6 +420,7 @@ main li {
 .oOo.oOo.oOo.oOo.oOo.oOo.oOo.oOo. 
 */
 
+em {font-style:normal;font-weight:bold;}
 img {width:100%; margin:.4rem auto;}
 
 
