--- a/public/style.css
+++ b/public/style.css
@@ -424,7 +424,7 @@ em {font-style:normal;font-weight:bold;}
 img {width:100%; margin:.4rem auto;}
 
 
-.lantern { display:inline-start;padding:0; margin: .3em; margin-left:0; margin-top:0; float:left; width:12%;}
+.lantern { display:block;float:left;padding:0; margin: .3em; margin-left:0; margin-top:0; float:left; width:12%;}
 
 
 .mage { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
