--- a/public/style.css
+++ b/public/style.css
@@ -808,7 +808,7 @@ img {
   
 @media screen and (max-width: 500px) { 
 
-nav li {float:center; text-align:center;}
+nav ul li {float:center; text-align:center;}
 
 
 }
