--- a/public/style.css
+++ b/public/style.css
@@ -96,7 +96,7 @@ HEADER STYLES
 */
 HEADER H1 {font-size:5rem;text-transform:uppercase;}
 
-#midicontainer h4 {margin-left:.5em; MARGIN-TOP:.5EM;}
+#midicontainer h4 {margin-left:.5em; font-size:larger; MARGIN-TOP:.5EM;}
 
 #midicontainer {  display: block;
   width: inherit;
@@ -813,6 +813,6 @@ img {
 @media screen and (max-width: 500px) { 
 
 nav ul li {float:center; width:100%; margin:auto; text-align:center;}
-
+header h1 {font-size: smaller;}
 
 }
