--- a/public/style.css
+++ b/public/style.css
@@ -96,7 +96,7 @@ HEADER STYLES
 */
 HEADER H1 {font-size:5rem;text-transform:uppercase;}
 
-#midicontainer h4 {margin-left:.5em; font-size:larger; MARGIN-TOP:.5EM;}
+#midicontainer h4 {margin-left:.5em; font-size:1.3rem; MARGIN-TOP:.5EM;}
 
 #midicontainer {  display: block;
   width: inherit;
