--- a/public/style.css
+++ b/public/style.css
@@ -198,7 +198,7 @@ h3, h4 {
   margin: 1em auto .5em;
 }
 h3, h4 {	text-shadow: 1px 1px 0 #1c4030, -1px 1px 0 #1c4030, -1px -1px 0 #1c4030, 1px -1px 0 #1c4030;
-color:#dfbe05; font-size:larger;  text-align:left;}
+color:#dfbe05; text-align:left;}
 
 
 h4 {font-size: 1.8rem;}
