--- a/public/style.css
+++ b/public/style.css
@@ -201,7 +201,6 @@ h3, h4 {	text-shadow: 1px 1px 0 #1c4030, -1px 1px 0 #1c4030, -1px -1px 0 #1c4030
 color:#dfbe05; text-align:left;}
 
 #midicontainer h4 {font-size: 1.8rem;}
-h4 {font-size:1.4rem;}
 
 h1 {
   width: 100%;
@@ -242,7 +241,7 @@ h3 {
   max-width: 100%;
   display: block;
   position: relative;
-  font-size: 3em;
+  font-size: 2.5rem;
   z-index: 2;
 }
 /*
