--- a/public/style.css
+++ b/public/style.css
@@ -432,6 +432,8 @@ img {width:100%; margin:.4rem auto;}
 
 .mage { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
 
+.sorcerer { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
+
 .lute { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
 
 
