--- a/public/style.css
+++ b/public/style.css
@@ -374,6 +374,12 @@ color:#dfbe05;
 .oOo.oOo.oOo.oOo.oOo.oOo.oOo.oOo. 
 */ 
 
+.changes ul li:before {
+	content: "✔.";
+}
+
+
+
 main ul, main ol {margin: auto; display:block;width:100%}
 main ul {
   padding:.3rem;
@@ -435,6 +441,7 @@ img {width:100%; margin:.4rem auto;}
 .sorcerer { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
 
 .lute { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
+
 
 
 figure {
