--- a/public/style.css
+++ b/public/style.css
@@ -416,7 +416,7 @@ main ol li:before {
 }
 
 main li {
-  margin: 1rem 0; text-align:justify}
+  margin: .3rem 0; text-align:justify}
 
 /* 
 .oOo.oOo.oOo.oOo.oOo.oOo.oOo.oOo.
