--- a/public/style.css
+++ b/public/style.css
@@ -384,7 +384,7 @@ main ul, main ol {margin: auto; display:block;width:100%}
 main ul {
   padding:.1rem;
   margin:auto;
-
+margin:0;
   border-left: 1.2rem solid #2b7344;
 	list-style-type: none;
 }
