--- a/public/style.css
+++ b/public/style.css
@@ -14,18 +14,33 @@ BASIC RESETS & GENERAL STYLES
 }
 
 body {
-
-
   font-family: "Nunito", sans-serif;
-font-size:1.1rem;
+  font-size: 1.1rem;
   overflow-wrap: break-word;
   word-wrap: break-word;
-
-background: #1e8a53 url(/image/forestbg.jpg) center center/cover no-repeat local;
-opacity: 1;
-background-image: linear-gradient(to right, #00984a, #00984a 2px, #1e8a53 2px, #1e8a53 );
-background-size: 4px 100%;
-  color: #d4ff90
+  color: #d4ff90;
+  position: relative;
+  background-image:
+    linear-gradient(
+      to right,
+      rgba(0, 152, 74, 0.5),
+      rgba(0, 152, 74, 0.5) 2px,
+      rgba(30, 138, 83, 0.5) 2px,
+      rgba(30, 138, 83, 0.5)
+    ),
+    url("/image/forestbg.jpg");
+  background-size:
+    4px 100%,    
+    cover;      
+  background-position:
+    center top,  
+    center center;
+  background-repeat:
+    repeat-y,   
+    no-repeat;
+  background-attachment:
+    local,
+    local;
 }
 
 #wrapper {
