--- a/public/style.css
+++ b/public/style.css
@@ -440,6 +440,8 @@ img {width:100%; margin:.4rem auto;}
 
 .book { display:inline-start;padding:0; margin: .3em; margin-left:0; margin-top:0; float:left; width:20%;}
 
+.sacred { display:inline-start;padding:0; margin: .3em; margin-left:0; margin-top:0; float:left; width:20%;}
+
 .mage { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
 
 .sorcerer { display:inline-end;padding:0; margin: .3em; margin-left:0; margin-top:0; float:right; width:20%;}
